docs: implement swagger for transaction endpoints
