# models/transaction.go
@@ -16,3 +16,14 @@ type TransactionDetail struct {
 	Quantity      int `json:"quantity"`
 	Subtotal      int `json:"subtotal"`
 }
+
+type BestSellingProduct struct {
+	Name       string `json:"nama"`
+	QtyTerjual int    `json:"qty_terjual"`
+}
+
+type DailyReport struct {
+	TotalRevenue    int                `json:"total_revenue"`
+	TotalTransaksi  int                `json:"total_transaksi"`
+	ProdukTerlaris  BestSellingProduct `json:"produk_terlaris"`
+}
